small update to load tables script

--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -11,6 +11,8 @@ library(here)
 library(tidyverse)
 library(dplyr)
 
+source(here::here("Rcode", "decision_table.R"))
+
 replist <- r4ss::SS_output(here::here("model", "2025_base_model"))
 inputs <- r4ss::SS_read(here::here("model", "2025_base_model"))
 
