--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2320,3 +2320,13 @@ pages = "740~p",
   author = {Gao, Y., D. L. Dettman, K. R. Piner, and F. R. Wallace},
   year = {2010}
 }
+
+@techreport{monk_documentation_2013,
+  type = {NOAA Technical Memorandum},
+  title = {Documentation of a Relational Database for the Oregon Sport Groundfish Onboard Sampling Program},
+  language = {en},
+  number = {NOAA -TM-NMFS-SWFSC-519},
+  author = {Monk, M., E.J. Dick, T. Buell, L. ZumBrunnen, A. Dauble, and D. Pearson},
+  year = {2013},
+  pages = {80},
+}
