--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2330,3 +2330,13 @@ pages = "740~p",
   year = {2013},
   pages = {80},
 }
+
+@techreport{Whitman_2024,
+  type = {ODFW Science Bulletin},
+  title = {Oregon Historical Marine Recreational Catch Reconstruction (1979-2000)},
+  language = {en},
+  number = {2024-09},
+  author = {Alison D. Whitman},
+  year = {2024},
+  pages = {114},
+}
