--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -3,18 +3,6 @@
 ## Figures
 
 <!-- FIGURES SHOULD BE ADDED HERE IN THE ORDER THAT THEY APPEAR IN THE REPORT -->
-<!-- USE THIS TEMPLATE -->
-```{r}
-#| label: fig-sbratio
-#| echo: false
-#| warning: false
-#| eval: true
-#| fig-cap: "EXAMPLE caption"
-
-knitr::include_graphics(
-    "figures/compare1_spawnbio.png"
-)
-```
 
 <!-- 03_Data -->
 
@@ -115,7 +103,7 @@ knitr::include_graphics(
 ```
 
 ```{r}
-#| label: fig-wcgbtsindex
+#| label: fig-wcgbtsindexcomparison
 #| echo: false
 #| warning: false
 #| eval: true
