--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2340,3 +2340,28 @@ pages = "740~p",
   year = {2024},
   pages = {114},
 }
+
+@article{kristensen_tmb:_2016,
+  title = {{TMB}: {Automatic} {Differentiation} and {Laplace} {Approximation}},
+  volume = {70},
+  journal = {Journal of Statistical Software},
+  author = {Kristensen, Kasper and Nielsen, A. and Berg, Casper W and Skaug, H. J. and Bell, B.M.},
+  year = {2016},
+  pages = {1--21}
+}
+
+@article{thorson_geostatistical_2015,
+  title = {Geostatistical delta-generalized linear mixed models improve precision for estimated abundance indices for {West} {Coast} groundfishes},
+  volume = {72},
+  issn = {1054-3139, 1095-9289},
+  url = {http://icesjms.oxfordjournals.org/cgi/doi/10.1093/icesjms/fsu243},
+  doi = {10.1093/icesjms/fsu243},
+  language = {en},
+  number = {5},
+  urldate = {2016-07-11},
+  journal = {ICES Journal of Marine Science},
+  author = {Thorson, J. T. and Shelton, A. O. and Ward, E. J. and Skaug, H. J.},
+  month = jun,
+  year = {2015},
+  pages = {1297--1310}
+}
