Update asar_references.bib wcgbts refs

--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2365,3 +2365,28 @@ pages = "740~p",
   year = {2015},
   pages = {1297--1310}
 }
+
+@article{keller2017northwest,
+  title={The northwest fisheries science Center's West coast Groundfish bottom trawl survey: History, design, and description},
+  author={Keller, A. A and Wallace, J. R. and Methot, R. D.},
+  year={2017},
+  journal={U.S. Department of Commerce, NOAA Technical Memorandum NMFS-NWFSC-136},
+  doi={10.7289/V5/TM-NWFSC-136}
+}
+
+@Article{Anderson_2024_SRP,
+  title = {sdmTMB: an R package for fast, flexible, and user-friendly generalized linear mixed effects models with spatial and spatiotemporal random fields},
+  author = {Sean C. Anderson and Eric J. Ward and Philina A. English and Lewis A. K. Barnett and James T. Thorson},
+  year = {2024},
+  journal = {bioRxiv},
+  Pages = {2022.03.24.485545},
+  doi = {10.1101/2022.03.24.485545},
+}
+
+@Manual{Johnson_indexwc,
+  title = {indexwc: Run indices for West Coast Groundfish assessments},
+  author = {Kelli F. Johnson and Sean C. Anderson and Chantel R. Wetzel and Eric J. Ward and Ian G. Taylor},
+  year = {2025},
+  note = {R package version 0.7},
+  url = {https://github.com/pfmc-assessments/indexwc},
+}
