--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -235,3 +235,140 @@ knitr::include_graphics(
 
 <!-- 04a_model_summary -->
 
+```{r}
+#| label: fig-ss3exe_1
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/1_SS3exe/compare2_spawnbio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-ss3exe_2
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/1_SS3exe/compare4_Bratio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-newdata_1
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/8_newlencomps/compare2_spawnbio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-newdata_2
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/8_newlencomps/compare4_Bratio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-newdata_3
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/13_newagecomps/compare2_spawnbio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-newdata_4
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/13_newagecomps/compare4_Bratio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-newdata_5
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/15_fitbias/compare2_spawnbio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-newdata_6
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/bridging/15_fitbias/compare4_Bratio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-growth
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/bio1_sizeatage.png"
+)
+```
+
+```{r}
+#| label: fig-biasadj
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/recruit_fit_bias_adjust.png"
+)
+```
+
+```{r}
+#| label: fig-selex_allfleets
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "EXAMPLE caption"
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/sel01_multiple_fleets_length1.png"
+)
+```
+
+<!-- 04b_model_results -->
+
+
+
+<!-- 04c_model_diagnostics -->
