part way through figures for 04b model results
also mod 09_figures

--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -2,11 +2,11 @@
 
 ### Parameter Estimates
 
-The list of the all the parameters used in the assessment model and their values (either fixed or estimated) is provided in **Table X**. The growth parameters estimated within the model are reasonable, commensurate with inspection of the raw data and consistent with what we know about the species. These parameters are relatively precisely estimated, in terms of the asymptotic standard error estimates. **Figure X** shows the estimated growth curve. Spawning output-at-length is shown in **Figure X**. Spawning output in the assessment is expressed in millions of eggs.
+The list of the all the parameters used in the assessment model and their values (either fixed or estimated) is provided in **Table X**. The growth parameters estimated within the model are reasonable, commensurate with inspection of the raw data and consistent with what we know about the species. These parameters are relatively precisely estimated, in terms of the asymptotic standard error estimates. @fig-growth shows the estimated growth curve. Spawning output-at-length is shown in @fig-spoutlen. Spawning output in the assessment is expressed in millions of eggs.
 
-Estimated stock-recruit function for the assessment model is shown in **Figure X**. Estimated recruitment deviations are shown **Figure X**. Recruitment of yelloweye rockfish was estimated to be quite variable over time, and the estimated stock-recruit function predicts a relatively wide range of cohort sizes over the observed range of spawning biomass. The model output recruitment variance (RMSE = 0.48) is consistent with the fixed input recruitment variance (R = 0.5).
+Estimated stock-recruit function for the assessment model is shown in @fig-SR_curve. Estimated recruitment deviations are shown @fig-recdevs_err. Recruitment of yelloweye rockfish was estimated to be quite variable over time, and the estimated stock-recruit function predicts a relatively wide range of cohort sizes over the observed range of spawning biomass. The model output recruitment variance (RMSE = 0.48) is consistent with the fixed input recruitment variance (R = 0.5).
 
-Length-based selectivity curves estimated in the assessment are shown for all fleets together in **Figure X** and for each fleet and survey separately from **Figure X** through **Figure X**. Estimated selectivity curves for the fishing fleets indicate that the recreational fleets access somewhat smaller fish than the commercial fisheries. This pattern is most pronounced in Oregon, and also as expected, since recent charter fishing selectivity has shifted shoreward where there is a higher density of smaller fish. Addition of the charter vessel length data did not appreciably change the estimate for the California recreational selectivity pattern and so the selectivity for the two series was not separated. All fleets for which curves were allowed to be dome-shaped (commercial trawl and non-trawl fleets) were estimated to be asymptotic. Estimated selectivity curves for the IPHC survey indicate a selection of the largest yelloweye available, and select the least amount of smaller yelloweye rockfish. The NWFSC trawl survey selected far more smaller yelloweye among all surveys. That the triennial survey selectivity was shifted to the largest fish but also selected some very small fish is likely an artifact of the very noisy composition data from that survey (**Figure X**). 
+Length-based selectivity curves estimated in the assessment are shown for all fleets together in @fig-selex_allfleets and for each fleet and survey separately from @fig-sel01 through @fig-sel12. Estimated selectivity curves for the fishing fleets indicate that the recreational fleets access somewhat smaller fish than the commercial fisheries. This pattern is most pronounced in Oregon, and also as expected, since recent charter fishing selectivity has shifted shoreward where there is a higher density of smaller fish. Addition of the charter vessel length data did not appreciably change the estimate for the California recreational selectivity pattern and so the selectivity for the two series was not separated. All fleets for which curves were allowed to be dome-shaped (commercial trawl and non-trawl fleets) were estimated to be asymptotic. Estimated selectivity curves for the IPHC survey indicate a selection of the largest yelloweye available, and select the least amount of smaller yelloweye rockfish. The NWFSC trawl survey selected far more smaller yelloweye among all surveys. That the triennial survey selectivity was shifted to the largest fish but also selected some very small fish is likely an artifact of the very noisy composition data from that survey (**Figure X**). 
 
 ### Fits to the Data
 
