--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -6,11 +6,11 @@ The list of the all the parameters used in the assessment model and their values
 
 Estimated stock-recruit function for the assessment model is shown in @fig-SR_curve. Estimated recruitment deviations are shown @fig-recdevs_err. Recruitment of yelloweye rockfish was estimated to be quite variable over time, and the estimated stock-recruit function predicts a relatively wide range of cohort sizes over the observed range of spawning biomass. The model output recruitment variance (RMSE = 0.48) is consistent with the fixed input recruitment variance (R = 0.5).
 
-Length-based selectivity curves estimated in the assessment are shown for all fleets together in @fig-selex_allfleets and for each fleet and survey separately from @fig-sel01 through @fig-sel12. Estimated selectivity curves for the fishing fleets indicate that the recreational fleets access somewhat smaller fish than the commercial fisheries. This pattern is most pronounced in Oregon, and also as expected, since recent charter fishing selectivity has shifted shoreward where there is a higher density of smaller fish. Addition of the charter vessel length data did not appreciably change the estimate for the California recreational selectivity pattern and so the selectivity for the two series was not separated. All fleets for which curves were allowed to be dome-shaped (commercial trawl and non-trawl fleets) were estimated to be asymptotic. Estimated selectivity curves for the IPHC survey indicate a selection of the largest yelloweye available, and select the least amount of smaller yelloweye rockfish. The NWFSC trawl survey selected far more smaller yelloweye among all surveys. That the triennial survey selectivity was shifted to the largest fish but also selected some very small fish is likely an artifact of the very noisy composition data from that survey (**Figure X**). 
+Length-based selectivity curves estimated in the assessment are shown for all fleets together in @fig-selex_allfleets and for each fleet and survey separately from @fig-sel01 through @fig-sel12. Estimated selectivity curves for the fishing fleets indicate that the recreational fleets access somewhat smaller fish than the commercial fisheries. This pattern is most pronounced in Oregon, and also as expected, since recent charter fishing selectivity has shifted shoreward where there is a higher density of smaller fish. Addition of the charter vessel length data did not appreciably change the estimate for the California recreational selectivity pattern and so the selectivity for the two series was not separated. All fleets for which curves were allowed to be dome-shaped (commercial trawl and non-trawl fleets) were estimated to be asymptotic. Estimated selectivity curves for the IPHC survey indicate a selection of the largest yelloweye available, and select the least amount of smaller yelloweye rockfish (@fig-sel12). The NWFSC trawl survey selected far more smaller yelloweye among all surveys (@fig-sel11). That the triennial survey selectivity was shifted to the largest fish but also selected some very small fish is likely an artifact of the very noisy composition data from that survey (@fig-sel10). 
 
 ### Fits to the Data
 
-Model fits to the fishery CPUE and survey indices are presented in **Figure X** through **Figure X**. The base model predicted a decreasing trend in the triennial survey between 1980 and 2004 (**Figure X**) and a slightly increasing trend for the NWFSC trawl survey between 2003 and 2024 (**Figure X**). The model predicted a relatively flat trend through the IPHC survey index despite the upward trend seen in the last three years as of this update (**Figure X**). The triennial survey index indicated a population decrease in 1992 and lower estimates (compared with pre-1992) persisted through the end of the index time series. This decrease in the abundance index coincided with decrease in number of biological samples collected from this survey. No changes have been implemented to the triennial survey between 1989 and 1992. In 1995, the survey timing slightly shifted from early fall to mid-summer, approximately a month earlier that previous surveys. This shift in timing, however, seems unlikely to impact our understanding of yelloweye rockfish abundance trends during that period, given the sedentary life history of the species. Additionally, the change in the index trend was observed before the slight shift in survey timing. The California MRFSS recreational CPUE index tracked the decline in observations through the 1990s (**Figure X**), and a slight increase in abundance was predicted in the Oregon MRFSS/ORBS recreational index during the 2000s (**Figure X**). The Oregon recreational observer index showed a small and very uncertain increasing trend in the 2000s (**Figure X**). The California CPFV charter series index indicated a relatively flat trajectory prior to 1992 with a drop in stock abundance from 1992 on (**Figure X**). The model predicted a decreasing trend for the Washington Recreational index despite the relatively large variances on many of the observations, which does not match the relative stability of the index from 1982 to the early 2000s (**Figure X**).
+Model fits to the fishery CPUE and survey indices are presented in @fig-indexfit3 through @fig-indexfit12. The base model predicted a decreasing trend in the triennial survey between 1980 and 2004 (@fig-indexfit10) and a slightly increasing trend for the NWFSC trawl survey between 2003 and 2024 (@fig-indexfit11). The model predicted a relatively flat trend through the IPHC survey index despite the upward trend seen in the last three years as of this update (@fig-indexfit12). The triennial survey index indicated a population decrease in 1992 and lower estimates (compared with pre-1992) persisted through the end of the index time series. This decrease in the abundance index coincided with decrease in number of biological samples collected from this survey. No changes have been implemented to the triennial survey between 1989 and 1992. In 1995, the survey timing slightly shifted from early fall to mid-summer, approximately a month earlier that previous surveys. This shift in timing, however, seems unlikely to impact our understanding of yelloweye rockfish abundance trends during that period, given the sedentary life history of the species. Additionally, the change in the index trend was observed before the slight shift in survey timing. The California MRFSS recreational CPUE index tracked the decline in observations through the 1990s (@fig-indexfit3), and a slight increase in abundance was predicted in the Oregon MRFSS/ORBS recreational index during the 2000s (@fig-indexfit6). The Oregon recreational observer index showed a small and very uncertain increasing trend in the 2000s (@fig-indexfit9). The California CPFV charter series index indicated a relatively flat trajectory prior to 1992 with a drop in stock abundance from 1992 on (@fig-indexfit8). The model predicted a decreasing trend for the Washington Recreational index despite the relatively large variances on many of the observations, which does not match the relative stability of the index from 1982 to the early 2000s (@fig-indexfit7).
 
 The model fits to length frequency distributions by year are shown in **Figure X** through **Figure X**. Pearson residuals for the fits by fleet and year are shown in **Figure X** through **Figure X**. The length data are very sparse in many years and the quality of fit varies among years and fleets, reflecting the differences in the quantity and quality of the data. However, neither length composition data nor the Pearson residuals, which reflect the noise in the data both within and among years, exhibit obvious patterns for any fleet. The data for fishing fleets are particularly poor after 2002 after retention of yelloweye rockfish was prohibited in most fleets and limited in trawl fleets. The model fitted length data aggregated across years reasonably well for all fleets. Input sample sizes for length composition data were tuned down using the Francis data weighting method. Francis weighting fits to the mean lengths for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X**.
 
