--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -128,6 +128,67 @@ projections_table[1:2, "Adopted ACL (mt)"] <- GMT016 |>
 # yelloweye_management <- read.csv(here::here("report", "tables", "yelloweye_management.csv"))
 ```
 
+```{r}
+#| eval: true
+#| warning: false
+#| echo: false
+#| message: false
+
+# produce catch_table
+
+# Get WA catch MT for where that info is available and create catch table
+# 1967-1974 - no weights in MT
+# 1975-1978 - use previous assessment MT
+# 1979 - no weights in MT
+# 1980-1989 - use previous assessment MT
+# 1990 - 2001 - use wa_rec_recfin_1990_2024_may
+# 2002 - 2004 - dont have this in MT
+# 2005 - 2024 - use wa_rec_recfin_1990_2024_may
+
+wa_rec_recfin_1990_2024_may <- read.csv(file.path(getwd(), "Data", "raw", "nonconfidential", "CTE501_WA_1990_2024_may.csv"))
+
+# years we don't have MT for
+mt_na <- data.frame(
+  year = c(1967, 1968, 1969, 1970, 1971, 1972, 1973, 1974, 1979, 2002, 2003, 2004),
+  catch = c(NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA)
+)
+
+# same as previous assessment - these are from the 2017 catch table
+mt_same_previous <- data.frame(
+  year = c(1975, 1976, 1977, 1978, 1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989),
+  catch = c(4.39, 4.57, 9.33, 4.57, 2.61, 4.77, 6.76, 9.15, 15.24, 11.46, 10.99, 13.66, 10.57, 18.39)
+)
+
+mt_1990_2001 <- wa_rec_recfin_1990_2024_may |>
+  filter(Year >= 1990 & Year <= 2001) |>
+  group_by(Year) |>
+  summarise(catch = sum(MT)) |>
+  rename(year = Year)
+
+mt_2005_2024 <- wa_rec_recfin_1990_2024_may |>
+  filter(Year >= 2005) |>
+  group_by(Year) |>
+  summarise(catch = sum(MT)) |>
+  rename(year = Year)
+
+all_wa_mt <- bind_rows(mt_na, mt_same_previous, mt_1990_2001, mt_2005_2024) |>
+  mutate(catch = round(catch, 3)) |>
+  arrange(year)|>
+  rename(`7` = catch)
+
+catch_table <- inputs$dat$catch |>
+  dplyr::select(year, fleet, catch) |>
+  tidyr::pivot_wider(names_from = fleet, values_from = catch) |>
+  dplyr::filter(year > 1) |>
+  rename(`8` = `7`) |>
+  dplyr::full_join(all_wa_mt) |>
+  mutate(`7` = case_when(year < 1967 ~ 0,
+                         TRUE ~ `7`)) |>
+  select(year, `1`:`6`, `7`, `8`) |>
+  mutate(Total = round(rowSums(across(`1`:`7`), na.rm = TRUE), 3)) |>
+  mutate(`7` = case_when(is.na(`7`) ~ " - ",
+                         TRUE ~ `7`))
+```
 
 <!-- Create table for nwfsc survey hauls and save as rds file -->
 ```{r}
